@@ -45,6 +45,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         initComponents();
         
         m_Dirty = dirty;
+        m_jTaxID.getDocument().addDocumentListener(dirty);
         m_jName.getDocument().addDocumentListener(dirty);
         m_jAddress.getDocument().addDocumentListener(dirty);
         m_jNotes.getDocument().addDocumentListener(dirty);
@@ -56,6 +57,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     
     public void writeValueEOF() {
         m_oId = null;
+        m_jTaxID.setText(null);
         m_jName.setText(null);
         m_jAddress.setText(null);
         m_jNotes.setText(null);
@@ -64,6 +66,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         txtCurdate.setText(null);
         m_jVisible.setSelected(false);
         jcard.setText(null);
+        m_jTaxID.setEnabled(false);
         m_jName.setEnabled(false);
         m_jAddress.setEnabled(false);
         m_jNotes.setEnabled(false);
@@ -78,6 +81,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     
     public void writeValueInsert() {
         m_oId = null;
+        m_jTaxID.setText(null);
         m_jName.setText(null);
         m_jAddress.setText(null);
         m_jNotes.setText(null);
@@ -86,6 +90,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         txtCurdate.setText(null);        
         m_jVisible.setSelected(true);
         jcard.setText(null);
+        m_jTaxID.setEnabled(true);
         m_jName.setEnabled(true);
         m_jAddress.setEnabled(true);
         m_jNotes.setEnabled(true);
@@ -101,14 +106,16 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     public void writeValueDelete(Object value) {
         Object[] customer = (Object[]) value;
         m_oId = customer[0];
-        m_jName.setText((String) customer[1]);
-        m_jAddress.setText((String) customer[2]);
-        m_jNotes.setText((String) customer[3]);
-        m_jVisible.setSelected(((Boolean) customer[4]).booleanValue());
-        jcard.setText((String) customer[5]);
-        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[6]));
-        txtCurdate.setText(Formats.DATE.formatValue(customer[7]));        
-        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[8]));        
+        m_jTaxID.setText((String) customer[1]);
+        m_jName.setText((String) customer[2]);
+        m_jAddress.setText((String) customer[3]);
+        m_jNotes.setText((String) customer[4]);
+        m_jVisible.setSelected(((Boolean) customer[5]).booleanValue());
+        jcard.setText((String) customer[6]);
+        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[7]));
+        txtCurdate.setText(Formats.DATE.formatValue(customer[8]));        
+        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[9]));        
+        m_jTaxID.setEnabled(false);
         m_jName.setEnabled(false);
         m_jAddress.setEnabled(false);
         m_jNotes.setEnabled(false);
@@ -124,14 +131,16 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     public void writeValueEdit(Object value) {
         Object[] customer = (Object[]) value;
         m_oId = customer[0];
-        m_jName.setText((String) customer[1]);
-        m_jAddress.setText((String) customer[2]);
-        m_jNotes.setText((String) customer[3]);     
-        m_jVisible.setSelected(((Boolean) customer[4]).booleanValue());
-        jcard.setText((String) customer[5]);
-        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[6]));
-        txtCurdate.setText(Formats.DATE.formatValue(customer[7]));        
-        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[8]));          
+        m_jTaxID.setText((String) customer[1]);        
+        m_jName.setText((String) customer[2]);
+        m_jAddress.setText((String) customer[3]);
+        m_jNotes.setText((String) customer[4]);     
+        m_jVisible.setSelected(((Boolean) customer[5]).booleanValue());
+        jcard.setText((String) customer[6]);
+        txtMaxdebt.setText(Formats.CURRENCY.formatValue(customer[7]));
+        txtCurdate.setText(Formats.DATE.formatValue(customer[8]));        
+        txtCurdebt.setText(Formats.CURRENCY.formatValue(customer[9]));          
+        m_jTaxID.setEnabled(true);
         m_jName.setEnabled(true);
         m_jAddress.setEnabled(true);
         m_jNotes.setEnabled(true);
@@ -145,16 +154,17 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     }
     
     public Object createValue() throws BasicException {
-        Object[] customer = new Object[9];
+        Object[] customer = new Object[10];
         customer[0] = m_oId == null ? UUID.randomUUID().toString() : m_oId;
-        customer[1] = m_jName.getText();
-        customer[2] = m_jAddress.getText();
-        customer[3] = m_jNotes.getText();
-        customer[4] = Boolean.valueOf(m_jVisible.isSelected());
-        customer[5] = Formats.STRING.parseValue(jcard.getText()); // Format to manage NULL values
-        customer[6] = Formats.CURRENCY.parseValue(txtMaxdebt.getText(), new Double(0.0));
-        customer[7] = Formats.TIMESTAMP.parseValue(txtCurdate.getText()); // not saved
-        customer[8] = Formats.CURRENCY.parseValue(txtCurdebt.getText()); // not saved
+        customer[1] = m_jTaxID.getText();
+        customer[2] = m_jName.getText();
+        customer[3] = m_jAddress.getText();
+        customer[4] = m_jNotes.getText();
+        customer[5] = Boolean.valueOf(m_jVisible.isSelected());
+        customer[6] = Formats.STRING.parseValue(jcard.getText()); // Format to manage NULL values
+        customer[7] = Formats.CURRENCY.parseValue(txtMaxdebt.getText(), new Double(0.0));
+        customer[8] = Formats.TIMESTAMP.parseValue(txtCurdate.getText()); // not saved
+        customer[9] = Formats.CURRENCY.parseValue(txtCurdebt.getText()); // not saved
         return customer;
     }   
     
@@ -189,46 +199,48 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
         txtCurdebt = new javax.swing.JTextField();
         txtCurdate = new javax.swing.JTextField();
         jLabel6 = new javax.swing.JLabel();
+        m_jTaxID = new javax.swing.JTextField();
+        jLabel7 = new javax.swing.JLabel();
 
         setLayout(null);
 
         jLabel3.setText(AppLocal.getIntString("label.name")); // NOI18N
         add(jLabel3);
-        jLabel3.setBounds(20, 20, 90, 14);
+        jLabel3.setBounds(20, 50, 90, 14);
         add(m_jName);
-        m_jName.setBounds(110, 20, 270, 18);
+        m_jName.setBounds(110, 50, 270, 18);
 
         jLabel12.setText(AppLocal.getIntString("label.notes")); // NOI18N
         add(jLabel12);
-        jLabel12.setBounds(20, 160, 90, 14);
+        jLabel12.setBounds(20, 190, 90, 14);
 
         jScrollPane1.setViewportView(m_jNotes);
 
         add(jScrollPane1);
-        jScrollPane1.setBounds(110, 160, 270, 70);
+        jScrollPane1.setBounds(110, 190, 270, 70);
 
         jLabel13.setText(AppLocal.getIntString("label.address")); // NOI18N
         add(jLabel13);
-        jLabel13.setBounds(20, 80, 90, 14);
+        jLabel13.setBounds(20, 110, 90, 14);
 
         jScrollPane2.setViewportView(m_jAddress);
 
         add(jScrollPane2);
-        jScrollPane2.setBounds(110, 80, 270, 70);
+        jScrollPane2.setBounds(110, 110, 270, 70);
 
         jLabel4.setText(AppLocal.getIntString("label.visible")); // NOI18N
         add(jLabel4);
-        jLabel4.setBounds(20, 330, 90, 14);
+        jLabel4.setBounds(20, 360, 90, 14);
         add(m_jVisible);
-        m_jVisible.setBounds(110, 330, 140, 20);
+        m_jVisible.setBounds(110, 360, 140, 20);
 
         jLabel5.setText(AppLocal.getIntString("label.card")); // NOI18N
         add(jLabel5);
-        jLabel5.setBounds(20, 50, 90, 14);
+        jLabel5.setBounds(20, 80, 90, 14);
 
         jcard.setEditable(false);
         add(jcard);
-        jcard.setBounds(110, 50, 270, 18);
+        jcard.setBounds(110, 80, 270, 18);
 
         jButton2.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/openbravo/images/color_line16.png"))); // NOI18N
         jButton2.addActionListener(new java.awt.event.ActionListener() {
@@ -237,7 +249,7 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
             }
         });
         add(jButton2);
-        jButton2.setBounds(390, 50, 50, 26);
+        jButton2.setBounds(390, 80, 50, 26);
 
         jButton3.setIcon(new javax.swing.ImageIcon(getClass().getResource("/com/openbravo/images/fileclose.png"))); // NOI18N
         jButton3.addActionListener(new java.awt.event.ActionListener() {
@@ -246,33 +258,39 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
             }
         });
         add(jButton3);
-        jButton3.setBounds(450, 50, 50, 26);
+        jButton3.setBounds(450, 80, 50, 26);
 
         jLabel1.setText(AppLocal.getIntString("label.maxdebt")); // NOI18N
         add(jLabel1);
-        jLabel1.setBounds(20, 240, 90, 14);
+        jLabel1.setBounds(20, 270, 90, 14);
 
         txtMaxdebt.setHorizontalAlignment(javax.swing.JTextField.RIGHT);
         add(txtMaxdebt);
-        txtMaxdebt.setBounds(110, 240, 130, 18);
+        txtMaxdebt.setBounds(110, 270, 130, 18);
 
         jLabel2.setText(AppLocal.getIntString("label.curdebt")); // NOI18N
         add(jLabel2);
-        jLabel2.setBounds(20, 270, 90, 14);
+        jLabel2.setBounds(20, 300, 90, 14);
 
         txtCurdebt.setEditable(false);
         txtCurdebt.setHorizontalAlignment(javax.swing.JTextField.RIGHT);
         add(txtCurdebt);
-        txtCurdebt.setBounds(110, 270, 130, 18);
+        txtCurdebt.setBounds(110, 300, 130, 18);
 
         txtCurdate.setEditable(false);
         txtCurdate.setHorizontalAlignment(javax.swing.JTextField.CENTER);
         add(txtCurdate);
-        txtCurdate.setBounds(110, 300, 130, 18);
+        txtCurdate.setBounds(110, 330, 130, 18);
 
         jLabel6.setText(AppLocal.getIntString("label.curdate")); // NOI18N
         add(jLabel6);
-        jLabel6.setBounds(20, 300, 90, 14);
+        jLabel6.setBounds(20, 330, 90, 14);
+        add(m_jTaxID);
+        m_jTaxID.setBounds(110, 20, 270, 18);
+
+        jLabel7.setText(AppLocal.getIntString("label.taxid")); // NOI18N
+        add(jLabel7);
+        jLabel7.setBounds(20, 20, 90, 14);
     }// </editor-fold>//GEN-END:initComponents
 
     private void jButton2ActionPerformed(java.awt.event.ActionEvent evt) {//GEN-FIRST:event_jButton2ActionPerformed
@@ -301,12 +319,14 @@ public class CustomersView extends javax.swing.JPanel implements EditorRecord {
     private javax.swing.JLabel jLabel4;
     private javax.swing.JLabel jLabel5;
     private javax.swing.JLabel jLabel6;
+    private javax.swing.JLabel jLabel7;
     private javax.swing.JScrollPane jScrollPane1;
     private javax.swing.JScrollPane jScrollPane2;
     private javax.swing.JTextField jcard;
     private javax.swing.JTextArea m_jAddress;
     private javax.swing.JTextField m_jName;
     private javax.swing.JTextArea m_jNotes;
+    private javax.swing.JTextField m_jTaxID;
     private javax.swing.JCheckBox m_jVisible;
     private javax.swing.JTextField txtCurdate;
     private javax.swing.JTextField txtCurdebt;
